# frappe_fcm

./: .gitignore  MANIFEST.in  README.md  license.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build-android.yml
firebase/: README.md
frappe_fcm/: __init__.py  hooks.py  install.py  modules.txt
frappe_fcm/config/: desktop.py
frappe_fcm/fcm/: __init__.py  fcm_sender.py  frappe_integration.py  notification_service.py
frappe_fcm/fcm/doctype/: __init__.py
frappe_fcm/fcm/doctype/fcm_device/: fcm_device.js  fcm_device.json  fcm_device.py
frappe_fcm/fcm/doctype/fcm_notification_log/: __init__.py  fcm_notification_log.json  fcm_notification_log.py
frappe_fcm/fcm/doctype/fcm_settings/: fcm_settings.js  fcm_settings.json  fcm_settings.py
frappe_fcm/fcm/fixtures/: __init__.py  notification_custom_fields.py
frappe_fcm/fcm/workspace/: __init__.py
frappe_fcm/fcm/workspace/fcm/: fcm.json
mobile_app/: README.md  settings.gradle
mobile_app/app/: build.gradle  google-services.json.example  proguard-rules.pro
mobile_app/app/src/main/: AndroidManifest.xml
mobile_app/app/src/main/java/io/frappe/fcm/: Config.java  (+3 more)
mobile_app/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_notification.xml  ic_offline.xml
mobile_app/app/src/main/res/layout/: activity_main.xml  activity_setup.xml
mobile_app/app/src/main/res/menu/: main_menu.xml
mobile_app/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
mobile_app/app/src/main/res/xml/: network_security_config.xml
releases/: README.md
